sonalint